Actionsoft/Product/AWS6/K8S部署/aws777777777777-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws777777777777-service
  namespace: awspaas-aws777777777777
spec:
  ports:
    - port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    awspaas: awspaas
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
